# reconix

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  App.spec.tsx  App.tsx  Dockerfile  Dockerfile.build  Pipfile  README.md  ROADMAP.md  docker-compose.yml  gunicorn.conf.py  index.html  index.scss  jest.config.ts  jest.setup.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
fast_api/: .env.example  alembic.ini  api.py  config.py  crypto.py  db.py  logging_config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  websocket.py
fast_api/alembic/: env.py
fast_api/auth/authlib/: __init__.py  api_key.py  jwt_handler.py  oauth2.py  password.py  permissions.py  rbac.py
fast_api/exceptions/: __init__.py  handlers.py
fast_api/middleware/: audit_logger.py  custom_middleware.py  deduplication.py  https_enforcer.py  idempotency.py  input_guard.py  metrics.py  rate_limiter.py  request_tracking.py  security_headers.py  sentry_integration.py  size_limiter.py  sunset_headers.py  tracing.py
fast_api/models/: __init__.py  api_key.py  audit_log.py  bvn_linkage.py  delink_request.py  idempotency_key.py  nin_linkage.py  notification.py  recycled_sim.py  revoked_token.py  stakeholder.py  user.py  webhook.py
fast_api/routes/: audit_logs.py  auth.py  bvn_linkages.py  dashboard.py  data_subject.py  delink_requests.py  identity.py  nin_linkages.py  notifications.py  recycled_sims.py  retention.py  webhooks.py  ws.py
fast_api/schemas/: __init__.py  audit_log.py  auth.py  bvn_linkage.py  common.py  data_subject.py  delink_request.py  nin_linkage.py  notification.py  recycled_sim.py  user.py  webhook.py
fast_api/services/: audit_service.py  cache_service.py  corroboration_service.py  data_subject_service.py  delink_service.py  linkage_service.py  notification_service.py  recycled_sim_service.py  retention_service.py  sync_orchestrator.py  sync_service.py  token_revocation_service.py  user_service.py  vault_service.py
fast_api/services/adapters/: base_adapter.py  nibss_adapter.py  nimc_adapter.py  telecom_adapter.py
fast_api/tests/: conftest.py
fast_api/tests/component/: test_audit_endpoints.py  test_auth_endpoints.py  test_batch_linkages.py  test_dashboard_endpoints.py  test_data_subject_endpoints.py  test_delink_endpoints.py  test_health_endpoint.py  test_identity_endpoints.py  test_metrics_endpoint.py  test_nin_endpoints.py  test_recycled_sims_endpoints.py  test_retention_endpoint.py  test_token_revocation.py  test_websocket_endpoint.py
fast_api/tests/integration/: test_body_injection.py  test_delink_unlinking.py  test_delink_workflow.py  test_idor_protection.py  test_ndpr_workflow.py  test_observability.py  test_retention_workflow.py  (+2 more)
fast_api/validators/: nigerian.py  pagination.py
(+173 files in other folders)
